# smile-base

./: .gitignore  PySmileBase.yml  README.md  pyproject.toml
config/: import_config_path.txt  local_config.yml  local_config_test.yml  local_config_unit_test.yml
src/Model/controller/: ks.py  ks_ar.py  ks_input.py  ks_output.py  trace.py
src/Model/data_level/: __init__.py  hypothesis.py  ner.py  pos.py  query.py  rel.py  sentence.py  text.py
src/Model/data_level/cids/: __init__.py  beneficial_stakeholder.py  characteristic.py  code.py  input.py  outcome.py  output.py  program.py  properties.py  service.py  stakeholder.py
src/Model/knowledge_source/: executive_ks.py  qa0_ner.py  search_text_graph.py
src/ontology/: namespaces.py  ontology_wrapper.py
src/ontology/ontology_cache/: catalog-v001.xml  cids.properties  compass.properties  compass.ttl
src/smile_base/: main.py
src/smile_base/Model/controller/: ks.py  ks_ar.py  ks_input.py  ks_output.py  request.py  trace.py
src/smile_base/Model/data_level/: __init__.py  coref.py  dep.py  hypothesis.py  ner.py  org_certainty.py  phrase.py  pos.py  query.py  rdf_property.py  rel.py  (+4 more)
src/smile_base/ontology/: extra.py  namespaces.py  ontology_wrapper.py
src/smile_base/utils/: init_db.py
tests/: coref_node_test.py  dep_node_test.py  hypothesis_node_test.py  ner_node_test.py  phrase_node_test.py  pos_node_test.py  rdf_property_node_test.py  rel_node_test.py  sparql_dict_test.py  spo_node_test.py  test_impact_model.py  text_node_test.py  trace_node_test.py  unit_test_extra.py  unit_test_ks.py  word_node_test.py
(+19 files in other folders)
